style/main.css
/* ... */
.panel-7 #bottle-7 {
	position: absolute;

	max-width: 272px;
	max-height: 100%;

	z-index: 2;
}

.panel-7 #coup-container {
	position: relative;

	grid-column-start: 4;
  grid-column-end: 6;
  grid-row-start: 2;
	grid-row-end: 4;
}

.panel-7 #coup-7 {
	position: absolute;

	max-width: 83px;
	max-height: 100%;

	z-index: 2;

	top: 4%;
}

.panel-7 #rock-container {
	position: relative;

	grid-column-start: 5;
  grid-column-end: 7;
  grid-row-start: 3;
	grid-row-end: 4;
}

.panel-7 #rock {
	position: absolute;

	max-width: 46px;
	max-height: 100%;

	z-index: 2;

	top: 8%;
}

.panel-7 #lime-container {
	position: relative;

	grid-column-start: 4;
  grid-column-end: 6;
  grid-row-start: 1;
	grid-row-end: 2;

	top: 8%;
}

.panel-7 #lime {
	position: absolute;

	max-width: 81px;
	max-height: 100%;

	z-index: 2;
}

/* Panel 6 */

.row.panel-6 {
	background-color: #3e8988;
	flex-direction: column;
	justify-content: center;
}

.row.panel-6 .text-container-full {
	display: flex;
	flex-direction: column;
	justify-content: space-around;
	align-items: center;

	width: 100%;

	color: #fdf7e4;
}

.panel-6 .info-text h1 {
	font-family: 'Abuget';
	font-size: 48pt;
	margin-bottom: 5%;
}

.row.panel-6 .text-container-full .info-text {
	max-width: 475px;
	text-align: center;
}

.row.panel-6 .text-container-full .info-text p {
	font-family: 'Akkurat';
	font-size: 12pt;
	line-height: 1.6;
}

.row.panel-6 .text-container-full .info-text p a {
	font-family: 'Akkurat';
	font-size: 12pt;
	line-height: 1.6;
	text-decoration: none;
}


@media (max-width: 900px), (max-device-width: 900px) and (orientation: portrait) { 

	.row.panel-6 .text-container-full .info-text {
		max-width: 75%;
	}

	.panel-6 .info-text h1 {
		text-align: left;
		font-size: 13vw;
	}

	.row.panel-6 .text-container-full .info-text p {
		font-size: 3.5vw;
	}
	.row.panel-6 .text-container-full .info-text p a {
		font-size: 3.5vw;
	}

	.panel-7 .animation-container-relative {
		width: 80%;
		max-width: 451px;
	}
	
}

/* ANIMATION CONTAINER */
.animation-container {
	position: relative;

	flex: 2;
}

.animation-items {
	height: 100vh;
}

/* TEXT BLOCKS */

.text-block {
	display: flex;
}

.text-block-right {
	padding-right: -15%;
}
.text-block-right .text-container {
	margin-right: 15%;
}
.text-block-left {
	padding-left: -15%;
}
.text-block-left .text-container {
	margin-left: 15%;
}

.text-container {
	display: flex;
	align-items: center;
	flex: 1;
}

.text-box.white h1, .text-box.white p, .learn-more-text-box.white h2  {
	color: #fcf6e3;
}

.text-box.blue h1, .text-box.blue p {
	color: #1a2943;
}

.text-box {
	display: flex;
	flex-direction: column;
}

.text-box h1 {
	font-family: 'Abuget';
	font-size: 48pt;
}

.text-box p {
	font-family: 'Akkurat';
	font-size: 12pt;
	line-height: 1.6;

	padding-top: 10px;
}

.learn-more-text-box h2 {
	font-family: 'PetitSerif';
	font-size: 12pt;
	letter-spacing: 0.2em;

	line-height: 2;
	text-align: center;
}

.text-box {
	width: 308px;
	height: 260px;
}

.learn-more-text-box {
	width: 445px;
}

#panel-3-ac-bg {
	display: none;
}

.footer {
	height: 100px;
	width: 100%;

	display: flex;
	justify-content: space-around;
	align-items: center;

	background-color: #1d2942;
	z-index: 1000;
}

.footer .text-and-email {
	display: flex;
	justify-content: space-around;
	width: 50%;
}

.footer .text-and-email p {
	font-family: 'PetitSerif';
	font-size: 14px;
	letter-spacing: 0.2em;
	color: #fdf7e4;
}

.footer .text-and-email a {
	font-family: 'PetitSerif';
	font-size: 14px;
	letter-spacing: 0.2em;
	color: #fdf7e4;
	text-decoration: none;
}

.footer .form-group {
	display: flex;
}

.footer input {
	height: 50px;
	color: #fdf7e4;
	font-family: 'PetitSerif';
	letter-spacing: 0.2em;
	font-size: 1vw;
	border-radius: unset;

	padding-top: 0.2em;
	padding-bottom: 0.2em;

	display: inline-block;
	border-radius: 0;
	-webkit-appearance: none;
}

.submit::-moz-focus-inner { 
	border: 0;
}

.footer input::placeholder {
	color: #fdf7e4;
	padding-left: 5%;
}

.footer .email-form-container input {
	border: 1px solid #fdf7e4;
	background-color: transparent;

	width: 20vw;
}

.footer .submit-button-container input {
	border-right: 1px solid #fdf7e4;
	border-top: 1px solid #fdf7e4;
	border-bottom: 1px solid #fdf7e4;
	border-left: none;
	background-color: transparent;

	width: 10vw;
	height: 100%;
}

.footer .success {
	color: #fdf7e4;
	font-family: 'PetitSerif';
}

/* MEDIA QUERIES */

@media only screen and (min-device-width: 320px) 
                   and (max-device-width: 900px) 
									 and (orientation: portrait) {

	.position-indicator {
		right: 5%;
	}

	.content-container .row.text-block-right.panel-3 {
		background-image: none;
		background-color: #1d2942;
	}

	.row {
		flex-direction: column;
	}

	.text-block-right .text-container, .text-block-left .text-container {
		margin: 0;
		justify-content: center;
	}

	.landing-text-container {
		width: 75%;
	}
	
	.landing-text-container p {
		font-size: 13vw;
	}

	img#artet-cannabis-aperitif {
		width: 34%;
	}

	img#scroll-to-discover {
		display: none;
	}
	
	img#scroll-to-discover-mobile {
		display: block;

		width: 47%;
    height: auto;
	}

	.text-container {
		order: 1;
		flex: 1;
		height: 40%;
	}

	.animation-container {
		order: 2;
		height: 60%;
		display: flex;
		justify-content: center;
		align-items: center;
		padding: 10%;
	}

	.panel-7 .animation-container {
		height: 40%;
		padding: 10% 17% 0 17%;
	}

	.animation-items {
		height: 100%;
	}

	.text-box {
		max-width: 75%;
		width: unset;
		height: auto;
	}

	.text-block .text-container .text-box h1 {
		font-size: 13vw;
	}

	.text-block .text-container .text-box p {
		font-size: 3.5vw;
		line-height: 1.4;
	}

	#panel-3-ac-bg {
		display: block;
	}
}
/* ... */

